fixed margin-top welcome-wrap iphone 12

--- a/styles.css
+++ b/styles.css
@@ -710,7 +710,7 @@ button {
     flex-direction: column;
     gap: 0;
     width: 100%;
-    margin: 10rem 0;
+    margin: 5rem 0;
   }
 
   .about-left-wrap {
